[package]
name = "bdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
bdk_electrum =  "0.23.2"
bdk_wallet = { version = "2.0.0", features = ["keys-bip39", "file_store", "std", "rusqlite"] }
miniscript = "12.3.5"
thiserror = "2.0.16"
uniffi = { version = "0.28.3", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "bdk"
